# zentity

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .ignore  .markdownlint.json  .mcp.json  .mise.toml  .pre-commit-config.yaml  .vercelignore  AGENTS.md  CLAUDE.md  LICENSE  PATENTS  README.md  biome.json  commit-message.txt  commitlint.config.mjs  design-system-audit.md  docker-compose.demo.yml  docker-compose.signer.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  progress.txt  vercel.json  zizmor.yml
.changeset/: README.md  config.json
.claude/: ralph-loop.local.md
.github/: dependabot.yml
.github/workflows/: build-attest.yml  code-quality.yml  reusable-build-service.yml  test.yml  zizmor.yml
apps/demo-hub/: .demo-store.json  .gitignore  Dockerfile  README.md  package.json  playwright.config.ts  pnpm-lock.yaml
apps/demo-rp/: .dockerignore  .gitignore  Dockerfile  README.md  biome.json  drizzle.config.ts  next.config.ts  package.json  playwright.config.mts  pnpm-lock.yaml  railway.toml  tsconfig.json  tsconfig.next.json  vitest.config.mts
apps/demo-wallet/: Dockerfile  README.md  package.json  pnpm-lock.yaml
apps/fhe/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  clippy.toml  deny.toml  railway.toml  start.sh
apps/fhe/.cargo/: config.toml
apps/fhe/.config/: nextest.toml
apps/fhe/src/: app.rs  auth.rs  error.rs  lib.rs  main.rs  settings.rs  telemetry.rs  test_support.rs  transport.rs
apps/fhe/src/crypto/: age.rs  codec.rs  compliance_level.rs  country_code.rs  dob.rs  gender.rs  keys.rs  liveness.rs  mod.rs  test_helpers.rs  tfhe_codec.rs
apps/fhe/src/routes/: age.rs  batch.rs  compliance.rs  country.rs  dob.rs  health.rs  keys.rs  liveness.rs  mod.rs
apps/fhe/tests/: age_test.rs  compliance_level_test.rs  concurrency_test.rs  country_code_test.rs  http_age_test.rs  http_auth_test.rs  http_batch_test.rs  http_compliance_level_test.rs  http_country_code_test.rs  http_error_test.rs  http_fhe_test.rs  http_health_test.rs  http_keys_test.rs  http_liveness_test.rs  keys_test.rs  persistence_test.rs
apps/fhe/tests/common/: mod.rs
apps/fhe/tests/http/: fixtures.rs  mod.rs
apps/fhe/tests/http_fhe/: batch.rs  compliance_level.rs  country_code.rs  dob.rs  error.rs  keys.rs  liveness.rs  mod.rs
apps/landing/: .gitignore  AGENTS.md  CLAUDE.md  README.md  biome.json  components.json  index.html  knip.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vercel.json  vite.config.ts
apps/liveness/: .gitignore  Dockerfile  README.md  conftest.py  entrypoint.sh  pyproject.toml  requirements.txt
apps/mcp/: biome.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.mts
apps/ocr/: .dockerignore  .gitignore  Dockerfile  README.md  conftest.py  entrypoint.sh  pyproject.toml  railway.toml  requirements.txt  start.sh
apps/ocr/app/: commitments.py  document_detector.py  main.py  ocr.py  parser.py  validators.py
apps/ocr/src/ocr_service/: main.py  schemas.py  settings.py  telemetry.py
apps/ocr/src/ocr_service/api/: extract.py  health.py  ocr.py  process.py  shared.py  verify.py
apps/ocr/src/ocr_service/core/: auth.py  logging.py
apps/ocr/src/ocr_service/services/: commitments.py  document_detector.py  ocr_engine.py  parser.py  pipeline.py  validators.py
apps/ocr/tests/: __init__.py
apps/ocr/tests/integration/: test_api.py
apps/ocr/tests/unit/: test_commitments.py  test_document_detector.py  test_ocr.py  test_parser.py  test_validators.py
apps/signer/: Cargo.toml  Dockerfile  Dockerfile.coordinator  Dockerfile.signer  README.md  build.rs  clippy.toml  railway.coordinator.toml  railway.signer.toml  railway.toml  start-coordinator.sh  start-signer.sh
apps/signer/.cargo/: config.toml
apps/signer/src/: audit.rs  config.rs  error.rs  lib.rs  telemetry.rs  tls.rs
apps/signer/src/frost/: coordinator.rs  decoders.rs  hpke_crypto.rs  jwt_verification.rs  key_format.rs  macros.rs  mod.rs  recovery_message.rs  signer_logic.rs  types.rs
apps/signer/src/middleware/: auth.rs  mod.rs  rate_limit.rs
apps/signer/src/routes/: dkg.rs  health.rs  mod.rs  signer_routes.rs  signing.rs
apps/signer/src/storage/: mod.rs  redb.rs
apps/signer/tests/: frost_integration.rs
apps/web/: .dockerignore  .env.example  .gitignore  .npmrc  .oxlintrc.json  .pnpm-builddeps.json  CLAUDE.md  Dockerfile  README.md  biome.json  drizzle.config.ts  knip.json  next.config.ts  package.json  playwright.config.mts  playwright.config.ts  pnpm-lock.yaml  railway.toml  server.mjs  tsconfig.json  vitest.config.mts  vitest.global-setup.ts  vitest.setup.mts  vitest.setup.ts  vitest.unit.config.mts
apps/zk/: .gitignore  Dockerfile  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
docs/: .gitignore  agent-architecture.md  agentic-authorization.md  analysis-openac-vs-zentity.md  architecture.md  attestation-privacy-architecture.md  better-auth-gap-analysis.md  blockchain-setup.md  cryptographic-pillars.md  fhe-key-lifecycle.md  implementation-roadmap.md  meta.json  noir-profiling.md  oauth-integrations.md  password-security.md  railway-signer-deployment.md  recovery-trust-model.md  rp-redirect-flow.md  social-login-integration-guide.md  ssi-architecture.md  tamper-model.md  verification.md  web2-to-web3-transition.md  web3-architecture.md  zk-architecture.md  zk-nationality-proofs.md
docs/(architecture)/: agent-architecture.md  attestation-privacy-architecture.md  meta.json  recovery-trust-model.md  ssi-architecture.md  tamper-model.md  web3-architecture.md
docs/(concepts)/: architecture.md  cryptographic-pillars.md  meta.json
docs/(protocols)/: bbs-credentials.md  disclosure-profile.md  fhe-key-lifecycle.md  meta.json  oauth-integrations.md  password-security.md  zk-architecture.md  zk-nationality-proofs.md
docs/(specs)/: meta.json  pact-v0.1-draft.md  veil-v0.1-draft.md
patches/: @better-auth__oauth-provider@1.7.0-beta.8.patch
scripts/: check-agent-sdk-rollout.mjs  check-all.sh  check-ocr-requirements-lock.sh  synthetic-onboarding.ts  test-frost-e2e.sh
(+2461 files in other folders)
