[package]
name = "fhe-service"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-OSaasy"
license-file = "../../LICENSE"

[dependencies]
# FHE library
tfhe = { version = "~1.4.2", features = ["integer"] }

# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
base64 = "0.22"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
once_cell = "1"

[build-dependencies]
chrono = "0.4"

[profile.release]
lto = "fat"
