[package]
name = "fhe-service"
version = "0.1.0"
edition = "2021"
license-file = "../../LICENSE"

[lib]
name = "fhe_service"
path = "src/lib.rs"

[[bin]]
name = "fhe-service"
path = "src/main.rs"

[dependencies]
# FHE library
tfhe = { version = "~1.4", features = ["integer"] }

# Web framework
axum = "~0.8.7"
tokio = { version = "~1.48", features = ["full"] }
tower-http = { version = "~0.6.8", features = ["trace"] }

# Serialization
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
bincode = "1.3.3"
base64 = "~0.22.1"
rmp-serde = "1.3"
flate2 = "1.0"

# Utilities
uuid = { version = "~1.19", features = ["v4", "serde"] }
tracing = "~0.1.43"
tracing-subscriber = { version = "~0.3.22", features = ["env-filter"] }
thiserror = "~2.0"
once_cell = "~1.21"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = ["http-proto", "reqwest-blocking-client", "trace"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.32.0"
opentelemetry-semantic-conventions = "0.31.0"

[build-dependencies]
chrono = "~0.4"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3.10"

[profile.release]
lto = "fat"
