[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr-service"
version = "0.1.0"
description = "Privacy-preserving OCR service for document processing"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.128.0",
    "iso3166==2.1.1",
    "mrz==0.6.2",
    "numpy==2.2.6",
    "onnxruntime==1.23.2",
    "opencv-python-headless==4.12.0.88",
    "opentelemetry-api==1.39.1",
    "opentelemetry-exporter-otlp==1.39.1",
    "opentelemetry-instrumentation-fastapi==0.60b1",
    "opentelemetry-instrumentation-httpx==0.60b1",
    "opentelemetry-instrumentation-requests==0.60b1",
    "opentelemetry-sdk==1.39.1",
    "httpx==0.28.1",
    "pillow==12.0.0",
    "pydantic==2.12.5",
    "python-stdnum==2.1",
    "rapidocr==3.4.5",
    "uvicorn==0.40.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "httpx==0.28.1",
]
dev = [
    "ruff==0.14.10",
    "pre-commit==4.5.1",
    # Security auditing
    "pip-audit==2.10.0",
    "bandit==1.9.2",
    # Include test deps in dev
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "httpx==0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["ocr_service"]
branch = true
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100  # Allow longer lines for regex patterns
target-version = "py312"
exclude = ["venv", ".venv", "__pycache__", ".git"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "S",   # flake8-bandit (security)
]
ignore = [
    "S104",  # Possible binding to all interfaces (intentional for Docker)
    "S607",  # Partial executable path (git is in PATH)
    "S110",  # try-except-pass is intentional for graceful error handling
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # Allow assert in tests

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]  # Allow assert in non-test code if needed

[tool.ruff.format]
quote-style = "double"
